2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_dispose),
	(gst_ttmlparse_init):
	* src/gstttmlprivate.h:
	  - Comment out timeline functions to make code compile while we work on
	    something else.
	  - Timeline initialization and disposal.

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlprivate.h:
	  - Typo in comment

2012-11-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	  - Set SRC pad to ALWAYS insted of SOMETIMES, as that is what it is.

201-11-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_cleanup),
	(gst_ttmlparse_event_compare), (gst_ttmlparse_timeline_insert),
	(gst_ttmlparse_timeline_get_next):
	* src/gstttmlparse.h:
	* src/gstttmlprivate.h:
	  - Initial work to support timelined events (incomplete!)

2012-11-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	  - Remove unneeded includes

2012-11-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer):
	  - Whitespace

2012-11-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer),
	(gst_ttmlparse_sax_element_start):
	  - Ignore <p> nodes without timing information.

2012-11-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer):
	  - Fix debug output (buffers are not null-terminated now)

2012-11-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	* src/fluttml.c: (plugin_init):
	* src/gstttmlparse.c:
	* src/gstttmltype.c: (gst_ttmltype_find), (gst_ttmltype_init):
	* src/gstttmltype.h:
	  - Implement the typefinder.
	  - Change the produced caps to the official application/ttml+xml

2012-11-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer),
	(gst_ttmlparse_chain), (gst_ttmlparse_init):
	* src/gstttmlparse.h:
	  - Handle pad push errors by storing them and returning them from the
	    chain once parsing finishes.
